add command shortcut

--- a/options/settings.html
+++ b/options/settings.html
@@ -66,6 +66,18 @@
     <input type="text" id="repo-name" placeholder="e.g., linkstash-sync">
     <span class="help-text">Repository will be created if it doesn't exist</span>
   </div>
+
+  <div class="form-group">
+    <h2>Keyboard Shortcuts</h2>
+    <p>You can set up a keyboard shortcut to quickly open LinkStack:</p>
+    <ol>
+      <li>Visit <code>chrome://extensions/shortcuts</code> in your browser</li>
+      <li>Find "LinkStack" in the list</li>
+      <li>Click the edit icon (pencil) next to "Open LinkStack sync menu"</li>
+      <li>Press your desired key combination (e.g., Ctrl+Shift+L or Command+Shift+L)</li>
+    </ol>
+    <span class="help-text">Choose a shortcut that's easy to remember and doesn't conflict with other browser shortcuts</span>
+  </div>
   
   <button id="save-settings">Save Settings</button>
   
